--- a/.github/workflows/python-app-pipeline.yml
+++ b/.github/workflows/python-app-pipeline.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Run SAST check
       run: |
         pip install bandit
-        bandit -r 
+        bandit -r ./
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
