--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,25 @@ services:
       - postgres_data:/var/lib/postgresql
     ports:
       - "5432:5432"
+  api:
+    build: .
+    container_name: myproductservice
+    environment:
+      DATABASE_URL: postgresql://root:root@db:5432/ProductsDB
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    ports:
+      - "9090:9090"
+    depends_on:
+      - api
 
 volumes:
   postgres_data:
