--- a/.github/workflows/python-app-pipeline.yml
+++ b/.github/workflows/python-app-pipeline.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: ci
 
 on:
   push:
@@ -13,7 +13,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  build-and-test:
 
     runs-on: ubuntu-latest
 
@@ -26,10 +26,10 @@ jobs:
           POSTGRES_DB: test_db
         ports:
           - 5432:5432
-          
+
     env:
       DATABASE_URL: postgresql://postgres:postgres@localhost:5432/test_db
-      
+
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python 3.11
@@ -50,3 +50,19 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+
+  sast:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.11"
+      - name: Run SAST check
+        run: |
+          pip install bandit
+          bandit -r . -x ./tests
+
